[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/RaidTarget.gd" type="Script" id=2]
[ext_resource path="res://src/UI/PrioritySpinner.tscn" type="PackedScene" id=3]

[node name="RaidTarget" type="VBoxContainer"]
anchor_right = 0.101562
anchor_bottom = 0.244792
grow_horizontal = 2
custom_constants/separation = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 52.0
margin_right = 52.0
size_flags_horizontal = 4

[node name="PrioritySpinner" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 104.0
margin_bottom = 108.0
size_flags_horizontal = 4

[connection signal="priority_changed" from="PrioritySpinner" to="." method="_on_PrioritySpinner_priority_changed"]
